# TUM-GDPR-Folder-Scanner

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: pypi.yml  python-test.yml
scan_svn/: main.py  svn_scanner.py
tum_gdpr_folder_scanner/: __init__.py  folder_scanner.py  main.py
