[tool.poetry]
name = "scan-svn"
version = "0.1.5"
description = ""
authors = ["Patrick Stöckle <patrick.stoeckle@tum.de>"]
maintainers = ["Patrick Stöckle <patrick.stoeckle@tum.de>"]
readme = "README.md"
repository = "git@gitlab.lrz.de:i4/software/scan-svn.git"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typer = "^0.4.0"
tika = "^1.24"
tqdm = "^4.62.3"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
lxml = "^4.7.1"
types-setuptools = "^57.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scan-svn = 'scan_svn.main:app'
