[tool.poetry]
name = "TUM-GDPR-Folder-Scanner"
version = "0.1.7"
description = "Script to check local folders for GDPR-relevant information in the TUM context."
authors = ["Patrick Stöckle <patrick.stoeckle@posteo.de>"]
maintainers = ["Patrick Stöckle <patrick.stoeckle@posteo.de>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pstoeckle/TUM-GDPR-Folder-Scanner.git"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
typer = "^0.7.0"
tika = "^1.24"
tqdm = "^4.64.1"
openpyxl = "^3.0.10"


[tool.poetry.group.dev.dependencies]
mypy = "^0.981"
lxml = "^4.9.1"
types-setuptools = "^65.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tum-gdpr-folder-scanner = 'tum_gdpr_folder_scanner.main:app'
